[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
replit = "^3.3.0"
Flask = "^2.3.3"
Werkzeug = "^2.3.8"
urllib3 = "^2.5.0"
requests = "^2.32.5"
highrise-bot-sdk = "^24.1.0"
python-dotenv = "^1.2.1"
psutil = "^7.1.3"
debugpy = "^1.8.17"

[tool.poetry.dev-dependencies]
debugpy = "^1.8.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"